update translation files

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <meta name="theme-color" content="#2563eb" />
     
     <!-- Apple Touch Icon -->
-    <link rel="apple-touch-icon" href="/images/Logo_JG_white.svg">
+    <link rel="apple-touch-icon" href="/images/Logo-JG-portfolio.avif">
     
     <!-- Robots directive -->
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
